--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="app.js" type="text/babel"></script>
+    <script crossorigin src="/index.js" type="text/babel"></script>
 </body>
 </html>
